add webpack hot reload

--- a/views/index.html
+++ b/views/index.html
@@ -21,9 +21,8 @@
 		}
 	</style>
 	<body>
-		<p id="title">Shoo!</p>
+		<p id="title">Shoo00000000000000!</p>
 		<div id="world"></div>
 		
-		<script type="text/javascript" src="dist/bundle.js" ></script>
 	</body>
 </html>
