--- a/views/index.html
+++ b/views/index.html
@@ -63,6 +63,24 @@
 		#world{
 			display: none;
 		}
+		#attack{
+			position: absolute;
+			right: 42px;
+			bottom: 42px;
+			width: 100px;
+			height: 100px;
+			background-color: black;
+			border-radius: 50%;
+			opacity: 0.5;
+			display: none;
+		}
+		#stickzone{
+			position: absolute;
+			left: 0;
+			bottom: 0;
+			width: 300px;
+			height: 150px;
+		}
 	</style>
 	<body>
 		<div id="loading">
@@ -70,5 +88,7 @@
 			<div id="loadingBar">
 			</div>
 		</div>
+		<div id="stickzone"></div>
+		<div id="attack"></div>
 	</body>
 </html>
