--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" />
+		<script src="./js/socket.io.js"></script>
 	</head>
 	<style>
 		html,body{
