finish part of hp bar

--- a/views/index.html
+++ b/views/index.html
@@ -82,6 +82,18 @@
 			width: 300px;
 			height: 150px;
 		}
+		.hpBox{
+			position: absolute;
+			width: 50px;
+			height: 10px;
+			border: 2px solid black;
+		}
+		.hp{
+			position: absolute;
+			width: 50px;
+			height: 10px;
+			background-color: red;
+		}
 	</style>
 	<body>
 		<div id="loading">
