--- a/views/index.html
+++ b/views/index.html
@@ -5,116 +5,10 @@
 		<title></title>
 		<meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" />
 		<script src="./js/socket.io.js"></script>
+		<link rel="stylesheet" href="/css/style.css" />
 	</head>
-	<style>
-		html,body{
-			width:100%;
-			height:100%;
-			margin: 0;
-			padding: 0;
-			overflow: hidden;
-			background-color: #d2d2d2;
-		}
-		#title{
-			position: absolute;
-			top: 60px;
-			font-family: "微软雅黑";
-			color: #444444;
-			font-size: 25px;
-			white-space: nowrap;
-			width: 100%;
-			text-align: center;
-			left: 0;
-			display: none;
-		}
-		#yes{
-			position: absolute;
-			top: 110%;
-			left: 50%;
-			content: 'Yes';
-			font-size: 25px;
-			color:green;
-			border: 2px dimgray solid;
-			width: auto;
-			padding: 0 10px 3px 10px;
-			border-radius: 10px;
-			margin-left: -32.43px;
-			display: none;
-		}
-		#yes:hover{
-			background-color: white;
-			cursor: pointer;
-		}
-		#loading{
-			position: absolute;
-			width: 200px;
-			top: 50%;
-			left: 50%;
-			color: #444444;
-			font-size: 40px;
-			margin: -41px 0 0 -100px;
-			text-align: center;
-		}
-		#loadingBar{
-			width: 0;
-			height: 20px;
-			background-color: #FFFFFF;
-			margin-top: 10px;
-		}
-		#world{
-			display: none;
-		}
-		#attack{
-			position: absolute;
-			right: 42px;
-			bottom: 42px;
-			width: 100px;
-			height: 100px;
-			background-color: black;
-			border-radius: 50%;
-			opacity: 0.5;
-			display: none;
-		}
-		#stickzone{
-			position: absolute;
-			left: 0;
-			bottom: 0;
-			width: 300px;
-			height: 150px;
-		}
-		#gameover{
-			position: absolute;
-			left: 50%;
-			top: 50%;
-			font-size: 30px;
-			font-family: "微软雅黑";
-			color: #444;
-			white-space: nowrap;
-			margin: -20px 0 0 -183px;
-			display: none;
-		}
-		#rabySkill{
-			position: absolute;
-			bottom: 32px;
-			right: 144px;
-			width: 40px;
-			height: 40px;
-			border: 2px solid #6c6c6c;
-			border-radius: 2px;
-			background : url(/img/vanish.png);
-			background-size: cover;
-			overflow: hidden;
-			display: none;
-		}
-		#mask{
-			position: absolute;
-			width: 40px;
-			height: 0px;
-			background-color: black;
-			opacity: 0.4;
-		}
-	</style>
 	<body>
+		<div id="world"></div>
 		<div id="loading">
 			Loading..
 			<div id="loadingBar">
@@ -126,7 +20,19 @@
 			<div id="mask"></div>
 		</div>
 		<div id="gameover">
-			你被击败了,刷新重新开始吧
+			你被击败了,刷新重新开始吧 ！
+		</div>
+		<div id="landscape">
+			请横屏食用哦 ！
+		</div>
+		<div id="qr">
+			请配合手机食用哦 ！
+		</div>
+		<div id="qr">
+			请配合手机食用哦 ！
+		</div>
+		<div id="landscape">
+			请横屏食用哦 ！
 		</div>
 	</body>
 </html>
