fix bug of attack

--- a/views/index.html
+++ b/views/index.html
@@ -27,9 +27,7 @@
 		</div>
 		<div id="qr">
 			请配合手机食用哦 ！
-		</div>
-		<div id="qr">
-			请配合手机食用哦 ！
+			<img src="/img/qr.png" />
 		</div>
 		<div id="landscape">
 			请横屏食用哦 ！
