--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,3 +14,4 @@ body,html{width:100%;height:100%;margin:0;padding:0;overflow:hidden;background-c
 #qr:after{display:inline-block;width:0;height:100%;vertical-align:middle;content:""}
 #landscape{width:100%;height:100%;text-align:center;position:absolute;top:0;font-size:30px;color:#444;z-index:5;background-color:#d3d3d3;display:none}
 #landscape:after{display:inline-block;width:0;height:100%;vertical-align:middle;content:""}
+#qr img{position:absolute;top: 50%;left: 50%;width: 100px;height: 100px;margin-left: -65px;margin-top: 50px;}
